Fix multiple definitions of timespec on mingw

--- a/d2/SConstruct
+++ b/d2/SConstruct
@@ -88,7 +88,7 @@ class DXXCommon:
 		def __init__(self,user_settings):
 			pass
 		def adjust_environment(self,program,env):
-			env.Append(CPPDEFINES = ['_WIN32', 'HAVE_STRUCT_TIMEVAL'])
+			env.Append(CPPDEFINES = ['_WIN32', 'HAVE_STRUCT_TIMEVAL', 'HAVE_STRUCT_TIMESPEC'])
 	class DarwinPlatformSettings(_PlatformSettings):
 		osdef = '__APPLE__'
 		def __init__(self,user_settings):
